<resources>
    <string name="app_name" translatable="false">HomeAutomation</string>
    <!-- FIXME -->
    <string name="app_api_key" translatable="false">AIzaSyATXp5h2940byJeOBZXXelD3DdERXIriuw</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="category_add_scenario">Add a story</string>
    <string name="category_scan_for_devices">Search for devices</string>

    <!-- Drawer header -->
    <string name="drawer_header_img_content_desc">Default picture</string>
    <string name="drawer_header_username">Not connected</string>
    <string name="drawer_header_email">Open my account</string>

    <!-- MainActivity -->
    <string name="action_account">My account</string>
    <string name="action_settings">Settings</string>
    <string name="story_enabled">Story enabled</string>
    <string name="story_disabled">Story disabled</string>

    <!-- StoryActivity -->
    <string name="add_story">New story</string>
    <string name="edit_story">Edit story</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="story_name">Story name</string>
    <string name="cover_picture">Cover picture</string>
    <string name="add_picture">Add picture</string>
    <string name="edit_picture">Edit picture</string>
    <string name="device_list">Device list</string>
    <string name="add_device">Add</string>
    <string name="delete_story_title">Confirm delete</string>
    <string name="delete_story">Do you want to cancel your modifications and delete this story? This cannot be cancelled.</string>
    <string name="toast_story_saved">Story saved</string>
    <string name="toast_story_deleted">Story deleted</string>
    <string name="remove_device_from_story_title">Remove a device</string>
    <string name="remove_device_from_story_description">Do you want to remove this device from this story?</string>
    <string name="snackbar_device_removed_from_story">Device removed</string>
    <string name="remove_image_story_title">Remove image</string>
    <string name="remove_image_story_description">Do you want to remove the image linked to this story?</string>
    <string name="story_set_alarm">Set an alarm</string>
    <string name="story_alarm_status">No alarm</string>
    <string name="add_alarm">Add alarm</string>

    <!-- ImageSearchActivity -->
    <string name="image_search_title">Search for images</string>

    <!-- ScanActivity: right menu settings -->
    <string name="scan_completed">Scan over</string>
    <string name="wifi_disabled_title">WIFI disabled</string>
    <string name="wifi_disabled">WIFI must be enabled in order to scan your network. Do you want to activate WIFI?</string>
    <string name="wifi_unavailable_title">No WIFI</string>
    <string name="wifi_unavailable">Sorry, this device does not have WIFI. You cannot scan your network</string>
    <string name="toast_enabling_wifi">Enabling WIFI…</string>
    <string name="toast_enabling_wifi_failed">Impossible to activate WIFI</string>
    <string name="device_icon">Device icon</string>
    <string name="device_name">Searching for a name…</string>
    <string name="device_ip">Device IP address</string>
    <string name="ip_label">IP: </string>
    <string name="device_is_self">your smartphone</string>
    <string name="device_vendor">Vendor</string>
    <string name="device_offline">Device offline</string>
    <string name="select_device_unselected">Add to list</string>
    <string name="select_device_selected">Added</string>
    <string name="scan_no_name_detected">(no name detected)</string>
    <string name="default_device_name">Default name</string>

    <string name="dialog_device_protected_title">Device is protected</string>
    <string name="device_username">Username</string>
    <string name="device_password">Password</string>
    <string name="dialog_error_field_required">Field required</string>
    <string name="dialog_auth_failed">Authentication failed</string>
    <string name="dialog_auth_success">Authentication successful!</string>

    <!-- DeviceActivity -->
    <string name="device_actions_when_enabled">Actions to perform when story is enabled</string>
    <string name="device_actions_when_disabled">Actions to perform when story is disabled</string>

</resources>
