<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardDevice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/deviceIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/device_icon"
                android:cropToPadding="false"
                card_view:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_name"
                    android:textColor="@color/primary_light" />

                <TextView
                    android:id="@+id/ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_ip"
                    android:textColor="@color/primary_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_vendor" />
            </LinearLayout>

            <ImageView
                android:id="@+id/lockIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/device_icon"
                android:cropToPadding="false"
                android:padding="@dimen/activity_horizontal_margin"
                android:visibility="invisible"
                card_view:srcCompat="@drawable/ic_lock_outline_white_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:padding="0dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/device_offline"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:enabled="false"
                android:linksClickable="true"
                android:onClick="selectDevice"
                android:text="@string/device_offline"
                android:textSize="12sp"
                android:typeface="normal" />

            <Button
                android:id="@+id/select_device"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:onClick="selectDevice"
                android:text="@string/select_device_unselected"
                android:textSize="12sp"
                android:typeface="normal"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>