<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardDevice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/deviceIcon"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/device_icon"
                android:cropToPadding="false"
                card_view:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_device_name"
                    android:textColor="@color/primary_light" />

                <TextView
                    android:id="@+id/ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_ip"
                    android:textColor="@color/primary_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/vendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_vendor" />
            </LinearLayout>

            <ImageView
                android:id="@+id/lockIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/device_icon"
                android:cropToPadding="false"
                android:padding="@dimen/activity_horizontal_margin"
                android:visibility="invisible"
                card_view:srcCompat="@drawable/ic_lock_white_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/primary_separator"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/delete_device"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:autoLink="web"
                android:background="@drawable/ic_delete_white_24dp"
                android:linksClickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="deleteDevice" />

            <Button
                android:id="@+id/configure_device"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:autoLink="web"
                android:background="@drawable/ic_settings_white_24dp"
                android:linksClickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="configureDevice" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>